--- a/Lessons 20 Control/Lessons 20 Control.html
+++ b/Lessons 20 Control/Lessons 20 Control.html
@@ -17,7 +17,7 @@
 <p class="RU">RU</p>
 </div>
 </div>
-<div>
+<div class="box-usd">
 <p class="USD">USD 28,90</p>
 <p class="EUR">EUR 35,00</p>
 </div>
